--- a/data_product/overview.ipynb
+++ b/data_product/overview.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "after-paraguay",
+   "id": "sized-religion",
    "metadata": {},
    "source": [
     "# Overview of the data product"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "elegant-curve",
+   "id": "novel-prince",
    "metadata": {},
    "outputs": [
     {
@@ -29,7 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "stunning-welsh",
+   "id": "fatty-beast",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "geological-grove",
+   "id": "interesting-color",
    "metadata": {},
    "source": [
     "### Geometry"
@@ -48,7 +48,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "amino-advance",
+   "id": "greenhouse-stanley",
    "metadata": {},
    "outputs": [
     {
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "tamil-homework",
+   "id": "imported-trunk",
    "metadata": {},
    "source": [
     "#### Signature description"
@@ -206,8 +206,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "popular-packing",
+   "execution_count": 17,
+   "id": "western-tuning",
    "metadata": {},
    "outputs": [
     {
@@ -606,18 +606,18 @@
        "[96704 rows x 117 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pandas.read_csv(\"per_geometry.csv\", index_col=0)"
+    "pandas.read_csv(\"per_geometry.csv\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "auburn-smith",
+   "id": "irish-clothing",
    "metadata": {},
    "source": [
     "#### Signature type description"
@@ -625,8 +625,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "precious-peace",
+   "execution_count": 16,
+   "id": "immediate-enterprise",
    "metadata": {},
    "outputs": [
     {
@@ -1175,18 +1175,18 @@
        "[16 rows x 118 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pandas.read_csv(\"per_type.csv\", index_col=0)"
+    "pandas.read_csv(\"per_type.csv\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "matched-source",
+   "id": "serious-resistance",
    "metadata": {},
    "source": [
     "#### Key"
@@ -1195,7 +1195,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "plain-pavilion",
+   "id": "honey-throw",
    "metadata": {},
    "outputs": [
     {
@@ -1312,8 +1312,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "mounted-compatibility",
+   "execution_count": 18,
+   "id": "preceding-geneva",
    "metadata": {},
    "outputs": [
     {
@@ -1338,7 +1338,7 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>Unnamed: 0</th>\n",
-       "      <th>0</th>\n",
+       "      <th>type_code</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1432,27 +1432,27 @@
        "</div>"
       ],
       "text/plain": [
-       "                              Unnamed: 0    0\n",
-       "0                Countryside agriculture  COA\n",
-       "1                    Accessible suburbia  ACS\n",
-       "2                            Open sprawl  OPS\n",
-       "3                       Wild countryside  WIC\n",
-       "4                         Warehouse land  WAL\n",
-       "5           Gridded residential quarters  GRQ\n",
-       "6                           Urban buffer  URB\n",
-       "7                  Disconnected suburbia  DIS\n",
-       "8       Dense residential neighbourhoods  DRN\n",
-       "9   Connected residential neighbourhoods  CRN\n",
-       "10            Dense urban neighbourhoods  DUN\n",
-       "11                        Local urbanity  LOU\n",
-       "12                    Distilled urbanity  DIU\n",
-       "13                     Regional urbanity  REU\n",
-       "14                 Metropolitan urbanity  MEU\n",
-       "15              Hyper distilled urbanity  HDU\n",
-       "16                               outlier  OUT"
+       "                              Unnamed: 0 type_code\n",
+       "0                Countryside agriculture       COA\n",
+       "1                    Accessible suburbia       ACS\n",
+       "2                            Open sprawl       OPS\n",
+       "3                       Wild countryside       WIC\n",
+       "4                         Warehouse land       WAL\n",
+       "5           Gridded residential quarters       GRQ\n",
+       "6                           Urban buffer       URB\n",
+       "7                  Disconnected suburbia       DIS\n",
+       "8       Dense residential neighbourhoods       DRN\n",
+       "9   Connected residential neighbourhoods       CRN\n",
+       "10            Dense urban neighbourhoods       DUN\n",
+       "11                        Local urbanity       LOU\n",
+       "12                    Distilled urbanity       DIU\n",
+       "13                     Regional urbanity       REU\n",
+       "14                 Metropolitan urbanity       MEU\n",
+       "15              Hyper distilled urbanity       HDU\n",
+       "16                               outlier       OUT"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1463,7 +1463,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "available-retreat",
+   "id": "brutal-absence",
    "metadata": {},
    "source": [
     "#### LSOA interpolation"
@@ -1471,8 +1471,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "russian-curtis",
+   "execution_count": 19,
+   "id": "stopped-validation",
    "metadata": {},
    "outputs": [
     {
@@ -1791,18 +1791,18 @@
        "9  0.000000  0.000000  0.000000  0.0  0.0  0.0  0.0  0.0  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pandas.read_csv(\"lsoa_estimates.csv\", nrows=10, index_col=0)"
+    "pandas.read_csv(\"lsoa_estimates.csv\", nrows=10)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "north-julian",
+   "id": "reserved-excuse",
    "metadata": {},
    "source": [
     "#### OA interpolation"
@@ -1810,8 +1810,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "underlying-evaluation",
+   "execution_count": 20,
+   "id": "unlimited-cologne",
    "metadata": {},
    "outputs": [
     {
@@ -2118,19 +2118,19 @@
        "9  0.0  0.0  0.0  0.0  0.0  0.0  1.0  0.0  0.0  0.0  0.0  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pandas.read_csv(\"output_area_estimates.csv\", nrows=10, index_col=0)"
+    "pandas.read_csv(\"output_area_estimates.csv\", nrows=10)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fitting-folks",
+   "id": "further-plasma",
    "metadata": {},
    "outputs": [],
    "source": []
