--- a/data_product/oa_interpolation.ipynb
+++ b/data_product/oa_interpolation.ipynb
@@ -1,84 +1,87 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "source": [
+    "# Interpolation of signatures to OA and LSOA"
+   ],
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "pressing-merit",
-   "metadata": {},
-   "outputs": [],
    "source": [
     "import geopandas\n",
     "import tobler"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "unexpected-chassis",
-   "metadata": {},
+   "source": [
+    "print(\"geopandas:\", geopandas.__version__)\n",
+    "print(\"tobler:\", tobler.__version__)"
+   ],
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "geopandas: 0.9.0\n",
       "tobler: 0.8.2\n"
      ]
     }
    ],
-   "source": [
-    "print(\"geopandas:\", geopandas.__version__)\n",
-    "print(\"tobler:\", tobler.__version__)"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "sustainable-texas",
-   "metadata": {},
+   "source": [
+    "signatures = geopandas.read_file(\"spatial_signatures_GB.gpkg\")"
+   ],
    "outputs": [
     {
-     "name": "stderr",
      "output_type": "stream",
+     "name": "stderr",
      "text": [
       "/opt/conda/lib/python3.8/site-packages/geopandas/geodataframe.py:577: RuntimeWarning: Sequential read of iterator was interrupted. Resetting iterator. This can negatively impact the performance.\n",
       "  for feature in features_lst:\n"
      ]
     }
    ],
-   "source": [
-    "signatures = geopandas.read_file(\"spatial_signatures_GB.gpkg\")"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "id": "mechanical-edward",
-   "metadata": {},
    "source": [
     "## OA"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "found-enterprise",
-   "metadata": {},
-   "outputs": [],
    "source": [
     "from download import download\n",
     "import pandas\n",
     "import dask_geopandas"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "provincial-afghanistan",
-   "metadata": {},
+   "source": [
+    "download(\"https://opendata.arcgis.com/api/v3/datasets/09b58d063d4e421a9cad16ba5419a6bd_0/downloads/data?format=geojson&spatialRefId=4326\", \"oa_ew.geojson\")"
+   ],
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "Downloading data from https://opendata.arcgis.com/api/v3/datasets/09b58d063d4e421a9cad16ba5419a6bd_0/downloads/data?format=geojson&spatialRefId=4326 (1 byte)\n",
       "\n",
@@ -87,29 +90,28 @@
      ]
     },
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "'oa_ew.geojson'"
       ]
      },
-     "execution_count": 54,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 54
     }
    ],
-   "source": [
-    "download(\"https://opendata.arcgis.com/api/v3/datasets/09b58d063d4e421a9cad16ba5419a6bd_0/downloads/data?format=geojson&spatialRefId=4326\", \"oa_ew.geojson\")"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "partial-automation",
-   "metadata": {},
+   "source": [
+    "download(\"https://www.nrscotland.gov.uk/files/geography/output-area-2011-mhw.zip\", \"oa_scot\", kind=\"zip\")"
+   ],
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "Creating data folder...\n",
       "Downloading data from https://www.nrscotland.gov.uk/files/geography/output-area-2011-mhw.zip (31.2 MB)\n",
@@ -120,160 +122,144 @@
      ]
     },
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "'oa_scot'"
       ]
      },
-     "execution_count": 55,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 55
     }
    ],
-   "source": [
-    "download(\"https://www.nrscotland.gov.uk/files/geography/output-area-2011-mhw.zip\", \"oa_scot\", kind=\"zip\")"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "parliamentary-sample",
-   "metadata": {},
-   "outputs": [],
    "source": [
     "oa_ew = geopandas.read_file(\"oa_ew.geojson\")"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "after-evening",
-   "metadata": {},
-   "outputs": [],
    "source": [
     "oa_scot = geopandas.read_file('oa_scot')"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "earlier-connectivity",
-   "metadata": {},
-   "outputs": [],
    "source": [
     "oa_ew = oa_ew[[\"OA11CD\", \"geometry\"]].to_crs(27700)"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "racial-cache",
-   "metadata": {},
-   "outputs": [],
    "source": [
     "oa_scot = oa_scot[[\"code\", \"geometry\"]].rename(columns={\"code\": \"OA11CD\"})"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "inclusive-uruguay",
-   "metadata": {},
-   "outputs": [],
    "source": [
     "oa = pandas.concat([oa_ew, oa_scot]).reset_index(drop=True)"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "genuine-glucose",
-   "metadata": {},
+   "source": [
+    "%%time\n",
+    "oa_ddf = dask_geopandas.from_geopandas(oa, npartitions=16)\n",
+    "oa_ddf[\"geometry\"] = oa_ddf.simplify(1).buffer(0)\n",
+    "oa = oa_ddf.compute()"
+   ],
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "CPU times: user 2min 18s, sys: 493 ms, total: 2min 18s\n",
       "Wall time: 12.1 s\n"
      ]
     }
    ],
-   "source": [
-    "%%time\n",
-    "oa_ddf = dask_geopandas.from_geopandas(oa, npartitions=16)\n",
-    "oa_ddf[\"geometry\"] = oa_ddf.simplify(1).buffer(0)\n",
-    "oa = oa_ddf.compute()"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "brief-aviation",
-   "metadata": {
-    "tags": []
-   },
+   "source": [
+    "%%time\n",
+    "estimates = tobler.area_weighted.area_interpolate(signatures, oa, spatial_index=\"target\", categorical_variables=[\"type\"], n_jobs=-1)"
+   ],
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "CPU times: user 1h 11min 21s, sys: 13.3 s, total: 1h 11min 35s\n",
       "Wall time: 2h 6min 1s\n"
      ]
     }
    ],
-   "source": [
-    "%%time\n",
-    "estimates = tobler.area_weighted.area_interpolate(signatures, oa, spatial_index=\"target\", categorical_variables=[\"type\"], n_jobs=-1)"
-   ]
+   "metadata": {
+    "tags": []
+   }
   },
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "printable-start",
-   "metadata": {},
-   "outputs": [],
    "source": [
     "estimates[\"OA11CD\"] = oa.OA11CD.values"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "independent-fiber",
-   "metadata": {},
-   "outputs": [],
    "source": [
     "primary = estimates.drop(columns=[\"geometry\", \"OA11CD\"]).idxmax(axis=1)"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "political-smoke",
-   "metadata": {},
-   "outputs": [],
    "source": [
     "estimates[\"primary_type\"] = primary.str.replace(\"type_\", \"\")"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 86,
-   "id": "sharing-serial",
-   "metadata": {},
-   "outputs": [],
    "source": [
     "estimates.columns = [col.replace(\"type_\", \"\") for col in estimates.columns]"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 87,
-   "id": "strategic-substitute",
-   "metadata": {},
-   "outputs": [],
    "source": [
     "order = ['OA11CD', 'primary_type', 'Countryside agriculture', 'Accessible suburbia', 'Open sprawl',\n",
     "       'Wild countryside', 'Warehouse land', 'Gridded residential quarters',\n",
@@ -283,25 +269,28 @@
     "       'Local urbanity', 'Distilled urbanity', 'Regional urbanity', 'outlier',\n",
     "       'Metropolitan urbanity', 'Hyper distilled urbanity', \n",
     "       ]"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "continental-manchester",
-   "metadata": {},
-   "outputs": [],
    "source": [
     "oa_estimated = estimates[order]"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "prompt-intent",
-   "metadata": {},
+   "source": [
+    "oa_estimated"
+   ],
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/html": [
        "<div>\n",
@@ -686,42 +675,38 @@
        "[227759 rows x 19 columns]"
       ]
      },
-     "execution_count": 89,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 89
     }
    ],
-   "source": [
-    "oa_estimated"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 90,
-   "id": "universal-hughes",
-   "metadata": {},
-   "outputs": [],
    "source": [
     "oa_estimated.to_csv(\"output_area_estimates.csv\")"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "id": "olympic-imaging",
-   "metadata": {},
    "source": [
     "## LSOA"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "functioning-thailand",
-   "metadata": {},
+   "source": [
+    "download(\"https://www.arcgis.com/sharing/rest/content/items/39b8fd75e06f4588b9242bcad1f1a898/data\", \"lookup\", kind=\"zip\")"
+   ],
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "Creating data folder...\n",
       "Downloading data from https://www.arcgis.com/sharing/rest/content/items/39b8fd75e06f4588b9242bcad1f1a898/data (22.4 MB)\n",
@@ -732,66 +717,63 @@
      ]
     },
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "'lookup'"
       ]
      },
-     "execution_count": 32,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 32
     }
    ],
-   "source": [
-    "download(\"https://www.arcgis.com/sharing/rest/content/items/39b8fd75e06f4588b9242bcad1f1a898/data\", \"lookup\", kind=\"zip\")"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "japanese-stock",
-   "metadata": {},
+   "source": [
+    "lookup = pandas.read_csv(\"lookup/Postcode_to_Output_Area_to_Lower_Layer_Super_Output_Area_to_Middle_Layer_Super_Output_Area_to_Local_Authority_District_November_2018_Lookup_in_the_UK.csv\")"
+   ],
    "outputs": [
     {
-     "name": "stderr",
      "output_type": "stream",
+     "name": "stderr",
      "text": [
       "/opt/conda/lib/python3.8/site-packages/IPython/core/interactiveshell.py:3165: DtypeWarning: Columns (13) have mixed types.Specify dtype option on import or set low_memory=False.\n",
       "  has_raised = await self.run_ast_nodes(code_ast.body, cell_name,\n"
      ]
     }
    ],
-   "source": [
-    "lookup = pandas.read_csv(\"lookup/Postcode_to_Output_Area_to_Lower_Layer_Super_Output_Area_to_Middle_Layer_Super_Output_Area_to_Local_Authority_District_November_2018_Lookup_in_the_UK.csv\")"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 92,
-   "id": "advance-perspective",
-   "metadata": {},
-   "outputs": [],
    "source": [
     "lookup = lookup[[\"oa11cd\", \"lsoa11cd\"]]"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "linear-shelter",
-   "metadata": {},
-   "outputs": [],
    "source": [
     "oa_lsoa = oa.merge(lookup[~lookup.oa11cd.duplicated()], left_on=\"OA11CD\", right_on=\"oa11cd\", how=\"left\")"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "shared-thanksgiving",
-   "metadata": {},
+   "source": [
+    "oa_lsoa"
+   ],
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/html": [
        "<div>\n",
@@ -931,21 +913,15 @@
        "[227759 rows x 4 columns]"
       ]
      },
-     "execution_count": 94,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 94
     }
    ],
-   "source": [
-    "oa_lsoa"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "alternative-domestic",
-   "metadata": {},
-   "outputs": [],
    "source": [
     "# https://github.com/geopandas/dask-geopandas/pull/69\n",
     "def dissolve(ddf, by=None, aggfunc=\"first\", split_out=1, **kwargs):\n",
@@ -997,88 +973,81 @@
     "        split_out=split_out,\n",
     "    )\n",
     "    return aggregated.set_crs(ddf.crs)"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "regional-distribution",
-   "metadata": {},
-   "outputs": [],
    "source": [
     "oa_lsoa_ddf = dask_geopandas.from_geopandas(oa_lsoa, npartitions=16)\n",
     "lsoa_ddf = dissolve(oa_lsoa_ddf, \"lsoa11cd\", split_out=16)\n",
     "lsoa = lsoa_ddf.compute()"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "solid-classic",
-   "metadata": {
-    "tags": []
-   },
+   "source": [
+    "%%time\n",
+    "estimates = tobler.area_weighted.area_interpolate(signatures, lsoa, spatial_index=\"target\", categorical_variables=[\"type\"], n_jobs=-1)"
+   ],
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "CPU times: user 11min 11s, sys: 9.26 s, total: 11min 20s\n",
       "Wall time: 50min 52s\n"
      ]
     }
    ],
-   "source": [
-    "%%time\n",
-    "estimates = tobler.area_weighted.area_interpolate(signatures, lsoa, spatial_index=\"target\", categorical_variables=[\"type\"], n_jobs=-1)"
-   ]
+   "metadata": {
+    "tags": []
+   }
   },
   {
    "cell_type": "code",
    "execution_count": 102,
-   "id": "changing-theme",
-   "metadata": {},
-   "outputs": [],
    "source": [
     "estimates[\"LSOA11CD\"] = lsoa.index.values"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 103,
-   "id": "unnecessary-exposure",
-   "metadata": {},
-   "outputs": [],
    "source": [
     "primary = estimates.drop(columns=[\"geometry\", \"LSOA11CD\"]).idxmax(axis=1)"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 104,
-   "id": "breeding-syndicate",
-   "metadata": {},
-   "outputs": [],
    "source": [
     "estimates[\"primary_type\"] = primary.str.replace(\"type_\", \"\")"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 105,
-   "id": "searching-theorem",
-   "metadata": {},
-   "outputs": [],
    "source": [
     "estimates.columns = [col.replace(\"type_\", \"\") for col in estimates.columns]"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 106,
-   "id": "collaborative-market",
-   "metadata": {},
-   "outputs": [],
    "source": [
     "order = ['LSOA11CD', 'primary_type', 'Countryside agriculture', 'Accessible suburbia', 'Open sprawl',\n",
     "       'Wild countryside', 'Warehouse land', 'Gridded residential quarters',\n",
@@ -1088,25 +1057,28 @@
     "       'Local urbanity', 'Distilled urbanity', 'Regional urbanity', 'outlier',\n",
     "       'Metropolitan urbanity', 'Hyper distilled urbanity', \n",
     "       ]"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 107,
-   "id": "demographic-dubai",
-   "metadata": {},
-   "outputs": [],
    "source": [
     "lsoa_estimated = estimates[order]"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 108,
-   "id": "assured-olive",
-   "metadata": {},
+   "source": [
+    "lsoa_estimated"
+   ],
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/html": [
        "<div>\n",
@@ -1491,42 +1463,36 @@
        "[41729 rows x 19 columns]"
       ]
      },
-     "execution_count": 108,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 108
     }
    ],
-   "source": [
-    "lsoa_estimated"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 109,
-   "id": "polar-programmer",
-   "metadata": {},
-   "outputs": [],
    "source": [
     "lsoa_estimated.to_csv(\"lsoa_estimates.csv\")"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 111,
-   "id": "third-nancy",
-   "metadata": {},
-   "outputs": [],
    "source": [
     "estimates.to_file(\"lsoa.gpkg\", driver=\"GPKG\")"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "quantitative-rocket",
-   "metadata": {},
+   "source": [],
    "outputs": [],
-   "source": []
+   "metadata": {}
   }
  ],
  "metadata": {
