add vector tiles to book

--- a/data_product/vector_tile.ipynb
+++ b/data_product/vector_tile.ipynb
@@ -1,23 +1,26 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "source": [
+    "# Generate vector tiles"
+   ],
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "organized-spelling",
-   "metadata": {},
-   "outputs": [],
    "source": [
     "import os\n",
     "import geopandas as gpd\n",
     "from sqlalchemy import create_engine"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "hollywood-chassis",
-   "metadata": {},
-   "outputs": [],
    "source": [
     "# user = os.environ.get('DB_USER')\n",
     "# pwd = os.environ.get('DB_PWD')\n",
@@ -31,28 +34,29 @@
     "\n",
     "db_connection_url = f\"postgres+psycopg2://{user}:{pwd}@{host}:{port}/built_env\"\n",
     "engine = create_engine(db_connection_url)"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "spare-footwear",
-   "metadata": {},
-   "outputs": [],
    "source": [
     "sql = f'SELECT * FROM gb_coastline_2016'\n",
     "coastline = gpd.read_postgis(sql, engine, geom_col='geometry')"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "equivalent-degree",
-   "metadata": {
-    "tags": []
-   },
+   "source": [
+    "coastline"
+   ],
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/html": [
        "<div>\n",
@@ -192,34 +196,35 @@
        "[2408 rows x 4 columns]"
       ]
      },
-     "execution_count": 6,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 6
     }
    ],
-   "source": [
-    "coastline"
-   ]
+   "metadata": {
+    "tags": []
+   }
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "urban-dress",
-   "metadata": {},
-   "outputs": [],
    "source": [
     "from shapely.ops import polygonize\n",
     "\n",
     "polygons = polygonize(coastline.geometry)"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "announced-plate",
-   "metadata": {},
+   "source": [
+    "polygons = gpd.GeoSeries([poly for poly in polygons], crs=coastline.crs)\n",
+    "polygons"
+   ],
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "0       POLYGON ((85970.000 14510.000, 85940.000 14530...\n",
@@ -236,99 +241,97 @@
        "Length: 2399, dtype: geometry"
       ]
      },
-     "execution_count": 11,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 11
     }
    ],
-   "source": [
-    "polygons = gpd.GeoSeries([poly for poly in polygons], crs=coastline.crs)\n",
-    "polygons"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "formed-junction",
-   "metadata": {},
-   "outputs": [],
    "source": [
     "df = gpd.read_parquet(\"../../urbangrammar_samba/spatial_signatures/signatures/signatures_combined_levels_orig.pq\")"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "pursuant-ridge",
-   "metadata": {},
+   "source": [
+    "%%time\n",
+    "clipped = gpd.clip(df, polygons)"
+   ],
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "CPU times: user 26min 54s, sys: 465 ms, total: 26min 55s\n",
       "Wall time: 26min 55s\n"
      ]
     }
    ],
-   "source": [
-    "%%time\n",
-    "clipped = gpd.clip(df, polygons)"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "blank-creek",
-   "metadata": {},
-   "outputs": [],
    "source": [
     "# clipped = clipped.explode()\n",
     "clipped = clipped.reset_index(drop=True)\n",
     "clipped_polys = clipped[clipped.geom_type==\"Polygon\"]"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "duplicate-interview",
-   "metadata": {},
+   "source": [
+    "clipped_polys.geom_type.value_counts()"
+   ],
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "Polygon    96936\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 28,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 28
     }
    ],
-   "source": [
-    "clipped_polys.geom_type.value_counts()"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "honey-measure",
-   "metadata": {},
-   "outputs": [],
    "source": [
     "clipped_polys.reset_index(drop=True)[[\"signature_type\", \"geometry\"]].to_crs(4326).to_file(\"../../urbangrammar_samba/spatial_signatures/signatures/signatures_combined_levels_clipped_4326.geojson\", driver=\"GeoJSON\")"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "municipal-fourth",
-   "metadata": {},
+   "source": [
+    "! tippecanoe -z15 \\\n",
+    "             --no-tile-compression \\\n",
+    "             --output-to-directory=../../great-britain/tiles/ \\\n",
+    "             --drop-densest-as-needed \\\n",
+    "             --coalesce-smallest-as-needed --extend-zooms-if-still-dropping --detect-shared-borders --coalesce --reorder --hilbert \\\n",
+    "             --force \\\n",
+    "             ../../urbangrammar_samba/spatial_signatures/signatures/signatures_combined_levels_clipped_4326.geojson"
+   ],
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "For layer 0, using name \"signatures_combined_levels_clipped_4326\"\n",
       "96936 features, 168540234 bytes of geometry, 13651 bytes of separate metadata, 116 bytes of string pool\n",
@@ -384,23 +387,14 @@
      ]
     }
    ],
-   "source": [
-    "! tippecanoe -z15 \\\n",
-    "             --no-tile-compression \\\n",
-    "             --output-to-directory=../../great-britain/tiles/ \\\n",
-    "             --drop-densest-as-needed \\\n",
-    "             --coalesce-smallest-as-needed --extend-zooms-if-still-dropping --detect-shared-borders --coalesce --reorder --hilbert \\\n",
-    "             --force \\\n",
-    "             ../../urbangrammar_samba/spatial_signatures/signatures/signatures_combined_levels_clipped_4326.geojson"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "applicable-liver",
-   "metadata": {},
+   "source": [],
    "outputs": [],
-   "source": []
+   "metadata": {}
   }
  ],
  "metadata": {
